--- a/client/src/index.css
+++ b/client/src/index.css
@@ -626,3 +626,21 @@ h1 {
   line-height: 120%;
   font-family: SF-Pro-Display-Thin, sans-serif;
 }
+
+.profile-info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: "SF-Pro-Display-Thin", sans-serif;
+  font-size: 20px;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.profile-info p {
+  margin: 0;
+}
+
+.profile-info strong {
+  font-weight: 600;
+}
