Стилизация модального окна пользователя

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -627,20 +627,24 @@ h1 {
   font-family: SF-Pro-Display-Thin, sans-serif;
 }
 
-.profile-info {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  font-family: "SF-Pro-Display-Thin", sans-serif;
+.user-profile-block {
+  border-bottom: 2px dashed rgba(255, 255, 255, 0.7);;
+  font-family: 'SF-Pro-Display-Thin', sans-serif;
+  margin-bottom: 15px;
   font-size: 20px;
-  width: 100%;
-  padding: 20px 0;
 }
 
-.profile-info p {
-  margin: 0;
+.user-profile-block-head {
+  font-family: 'SF-Pro-Display-Thin', sans-serif;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.7);;
 }
 
-.profile-info strong {
-  font-weight: 600;
+.logout-btn {
+  color: #F34040;
+  font-family: SF-Pro-Display-Thin, sans-serif;
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
